--- a/FRONT/src/app/components/template/template.component.html
+++ b/FRONT/src/app/components/template/template.component.html
@@ -20,6 +20,10 @@
                 <mat-icon mat-list-icon>add_shopping_cart</mat-icon>
                 Carrinho</a
             >
+            <a mat-list-item routerLink="/venda/listar">
+                <mat-icon mat-list-icon>list</mat-icon>
+                Listar Venda
+            </a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
